# midi_generator

./: .flake8  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
lib/: API.cpp  pybind.cpp
lib/include/: API.h  configuration.h  note.h
lib/midi_generator/: note.h  pybind.cpp
libs/: note.cpp
midi/: best.mid
midi_generator/: __init__.py  __main__.py  cli.py  commands.py  compression.py  conversion.py  genetic.py  math.py  parser.py  syncopation.py
res/: default.ini
scripts/: build.sh  clean.sh
src/: config.py  genetic.py
src/lib/midi_generator/: build.cpp  note.h
src/midi_generator/: __init__.py  __main__.py  commands.py  compression.py  config.py  constants.py  conversion.py  genetic.py  main.py  note.py  output.py  parser.py  scale.py  syncopation.py  types.py
src/midi_generator/cli/: __init__.py  __main__.py  commands.py
src/midi_generator/config/: config.py  parser.py
src/midi_generator/utils/: __init__.py  constants.py  math.py  note.py  output.py  scale.py  syncopation.py
test/: test_api.py  test_boost_note.py  test_commands.py  test_note.py
tests/: test_boost_note.py  test_commands.py
