[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "midi_generator"
description = "MIDI Generator for Python using genetic algorithms"
version = "0.0.7"
authors = [
  { name = "Gheorghe Andrei", email = "gheorgheandrei13@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["midi", "music", "music generation", "genetic algorithms"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Operating System :: OS Independent",
]
dependencies = [
    "midiutil",
    "simplecoremidi",
    "numpy",
    "matplotlib",
    "seaborn",
    "deap"
]

[project.urls]
"Homepage" = "https://github.com/speedypleath/midi-generator"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["midi_generator"]
exclude = ["midi_generator.tests*"]
