[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["test"]

[project]
name = "midi_generator"
description = "MIDI Generator for Python using genetic algorithms"
version = "1.1.1"
authors = [
    { name = "Gheorghe Andrei", email = "gheorgheandrei13@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["midi", "music", "music generation", "genetic algorithms"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Operating System :: OS Independent",
]
dependencies = [
    "midiutil",
    "deap",
    "pytest",
]

[project.scripts]
midi-generator = "midi_generator.cli:print_cli"

[project.urls]
"Homepage" = "https://github.com/speedypleath/midi_generator"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*",]
exclude = [".test*"]
